--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,15 @@ plugins {
 android {
     compileSdkVersion 31
     buildToolsVersion "31.0.0"
-
+    dataBinding{
+        enabled =true
+    }
     defaultConfig {
         applicationId "com.appapp26.rihlati"
-        minSdkVersion 22
+        minSdkVersion 17
         targetSdkVersion 31
         versionCode 1
-        versionName "1.0"
+        versionName "1.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,4 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
 }
